locationとchatのイベントを分割。その他諸々修正

--- a/main.css
+++ b/main.css
@@ -24,7 +24,7 @@
   line-height:20px;
   opacity:0.8;
   background:#4477aa;
-  border:solid 3px #336699;
+/*  border:solid 3px #336699;*/
   border-radius:4px;
   box-shadow:2px 2px 10px #333;
   text-shadow:1px 1px 1px #666;
